8214445: [test] java/net/URL/HandlerLoop has illegal reflective access
Reviewed-by: lancea, chegar, bpb